styles/projetos.css
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    margin-top: auto;
    margin-bottom: auto;
    padding: 1rem 1rem;
}

.project__row {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 2rem;
    overflow-x: scroll;
    height: 78vh;
}

.project__squares {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: -webkit-fill-available;
    text-align: center;
}

.project__preview {
    height: 100%;
    width: 321px;
    background-color: white;
    border: solid 1px var(--eggshell);
    border-radius: 0.5rem;
}

.project__title {
    font-family: var(--fonte-texto);
    font-size: 1.375rem;
    font-weight: 600;
    color: var(--cor-primaria);
    text-decoration: none;
    white-space: nowrap;
    padding: 0.2rem 0;
}

.project__title:hover {
    color: var(--cor-secundaria);
}

/*Scrollbar */

.project__row::-webkit-scrollbar {
    background-color: var(--cor-secundaria);
    height: 0.2rem;
}

.project__row::-webkit-scrollbar-thumb {
    background-color: var(--cor-terciaria);
}


/*Mobile*/
@media screen and (max-width: 820px) {
    .project {
        margin: 63px 0 20px 0;
    }

    .project__row {
        flex-direction: column;
        gap: 2em;
        height: 100vh;
    }

    .project__squares {
        display: flex;
        flex-direction: column;
    }

    .project__preview {
        width: 330px;
        height: 530px;
        background-color: white;
    }
}

